
      \item The depreated legacy typedefs of \code{Sint} and
      \code{Sfloat} in header \file{R.h} can be excluded by defining
      macro \code{NO_S_TYPEDEFS} before including the header.  This is
      defined when using \command{R CMD CHECK --as-cran} or by defining the
      environment variable \env{_R_NO_S_TYPEDEFS_} to a true value when
      running \command{R CMD CHECK}.
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item \command{R CMD check} does more checking of package Rd
      files, warning about invalid email addresses and (some) invalid
      URIs and noting empty \samp{\item} labels in description lists.
    }
  }

  \subsection{DEPRECATED AND DEFUNCT}{
    \itemize{
      \item \code{default.stringsAsFactors()} is defunct.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item Hashed \code{environment}s with sizes less than 5 now can grow,
      too. (Reported to R-devel by Duncan Garmonsway.)

      \item \code{as.character(<Rd>, deparse = TRUE)} failed to
      re-escape curly braces in LaTeX-like text.
      (Reported by Hadley Wickham in \PR{18324}.)

      \item \code{library()} now passes its \code{lib.loc} argument when
      requiring \code{Depends} packages; reported (with fix) in \PR{18331}
      by Mikael Jagan.

      \item \code{R CMD Stangle}: improved message about \sQuote{Output}
      files.
    }
  }
}

\section{\Rlogo CHANGES IN R 4.2.0 patched}{
  \subsection{INSTALLATION on a UNIX-ALIKE}{
    \itemize{
      \item The libraries searched for by \option{--with-blas} (without
      a value) now include BLIS (after OpenBLAS but before ATLAS).  And
      on macOS, the Accelerate framework (after ATLAS).

      \item The included LAPACK sources have been updated to 3.10.1.
    }
  }
  \subsection{UTILITIES}{
    \itemize{
      \item The (full path to) the command \command{tidy} to be used for
      HTML validation can be set by environment variable \env{R_TIDYCMD}.

      \item Setting environment variable