@@ -22,7 +22,8 @@ CURL_LIBS = @CURL_LIBS@
 ## in case we want to link with this for UBSAN checks
 CXX = @CXX@
 ## DEFS is generated by autoconf as -DHAVE_CONFIG_H: R_DEFS is user's
-DEFS = @DEFS@ @R_DEFS@
+## -DNO_S_TYPEDEFS is temporary.
+DEFS = @DEFS@ @R_DEFS@ -DNO_S_TYPEDEFS
 DISTDIR_TAR_EXCLUDE = --exclude=.svn --exclude=Makefile --exclude="*.o" --exclude="*$(SHLIB_EXT)" --exclude="*~"
 DYLIB_EXT = @DYLIB_EXT@
 DYLIB_LD = @DYLIB_LD@
