@@ -38,12 +38,16 @@
 #if defined(__cplusplus) && !defined(DO_NOT_USE_CXX_HEADERS)
 # include <cstdlib>
 # include <cstdio>
-# include <climits>
+# ifndef NO_S_TYPEDEFS
+#  include <climits>
+# endif
 # include <cmath>
 #else
 # include <stdlib.h> /* Not used by R itself, but widely assumed in packages */
 # include <stdio.h>  /* Used by ca 200 packages, but not in R itself */
-# include <limits.h> /* for INT_MAX */
+# ifndef NO_S_TYPEDEFS
+#   include <limits.h> /* for INT_MAX */
+# endif
 # include <math.h>
 #endif 
 /* 
@@ -78,7 +82,7 @@
 #include <R_ext/Random.h>     /* RNG interface */
 #include <R_ext/Utils.h>      /* sort routines et al */
 #include <R_ext/RS.h>
-/* for PROBLEM ... R_Calloc, R_Realloc, R_Free, Memcpy, F77_xxxx */
+/* for R_Calloc, R_Realloc, R_Free, Memcpy, F77_xxxx */
 
 
 #ifndef NO_S_TYPEDEFS
